chore(lazytower.circom): change the license to "GPL-3.0" (same with the dependency: circomlib)

--- a/packages/lazytower.circom/package.json
+++ b/packages/lazytower.circom/package.json
@@ -10,7 +10,7 @@
         "zksnark",
         "merkle tree"
     ],
-    "license": "MIT",
+    "license": "GPL-3.0",
     "files": [
         "circuits/",
         "README.md"
