--- a/packages/incremental-merkle-tree/package.json
+++ b/packages/incremental-merkle-tree/package.json
@@ -27,8 +27,7 @@
     "scripts": {
         "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
         "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
-        "prepublishOnly": "yarn build",
-        "docs": "typedoc src/index.ts --out ../../docs/incremental-merkle-tree"
+        "prepublishOnly": "yarn build"
     },
     "publishConfig": {
         "access": "public"
@@ -37,7 +36,6 @@
         "circomlibjs": "^0.0.8",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.32.1",
-        "typedoc": "^0.22.11"
+        "rollup-plugin-typescript2": "^0.32.1"
     }
 }
