--- a/packages/lazytower/package.json
+++ b/packages/lazytower/package.json
@@ -27,8 +27,7 @@
     "scripts": {
         "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
         "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
-        "prepublishOnly": "yarn build",
-        "docs": "typedoc src/index.ts --out ../../docs/lazytower"
+        "prepublishOnly": "yarn build"
     },
     "publishConfig": {
         "access": "public"
@@ -36,8 +35,7 @@
     "devDependencies": {
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.32.1",
-        "typedoc": "^0.22.11"
+        "rollup-plugin-typescript2": "^0.32.1"
     },
     "dependencies": {
         "poseidon-lite": "^0.2.0"
