--- a/packages/sparse-merkle-tree/package.json
+++ b/packages/sparse-merkle-tree/package.json
@@ -32,8 +32,7 @@
     "scripts": {
         "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
         "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
-        "prepublishOnly": "yarn build",
-        "docs": "typedoc src/index.ts --out ../../docs/sparse-merkle-tree"
+        "prepublishOnly": "yarn build"
     },
     "publishConfig": {
         "access": "public"
@@ -44,7 +43,6 @@
         "crypto-js": "^4.1.1",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.32.1",
-        "typedoc": "^0.22.11"
+        "rollup-plugin-typescript2": "^0.32.1"
     }
 }
