chore(groth16): version 0.3.0

--- a/packages/groth16/package.json
+++ b/packages/groth16/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@zk-kit/groth16",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "description": "A snippet of SnarkJS code for verifying and generating Groth16 proofs only.",
-    "license": "MIT",
+    "license": "GPL-3.0",
     "main": "dist/index.node.js",
     "exports": {
         "node": {
