chore(smt): rename smt package

--- a/packages/smt/package.json
+++ b/packages/smt/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@zk-kit/sparse-merkle-tree",
-    "version": "0.2.0",
+    "name": "@zk-kit/smt",
+    "version": "1.0.0",
     "description": "Sparse Merkle tree implementation in TypeScript.",
     "license": "MIT",
     "keywords": [
@@ -23,7 +23,7 @@
         "README.md"
     ],
     "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
-    "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/sparse-merkle-tree",
+    "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/smt",
     "author": {
         "name": "Cedoor",
         "email": "me@cedoor.dev",
