feat(poseidon-proof): create package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "target": "ES5",
         "module": "ES6",
         "moduleResolution": "node",
+        "resolveJsonModule": true,
         "esModuleInterop": true,
         "preserveConstEnums": true,
         "skipLibCheck": true,
