--- a/packages/poseidon-proof/package.json
+++ b/packages/poseidon-proof/package.json
@@ -16,6 +16,9 @@
         "LICENSE",
         "README.md"
     ],
+    "engines": {
+        "node": ">=18.0.0"
+    },
     "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/poseidon-proof",
     "bugs": {
@@ -31,12 +34,16 @@
     },
     "devDependencies": {
         "@rollup/plugin-json": "^5.0.1",
+        "@types/download": "^8.0.5",
         "@types/snarkjs": "^0.7.7",
+        "@types/tmp": "^0.2.6",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.32.1"
     },
     "dependencies": {
-        "@zk-kit/groth16": "0.3.0"
+        "@zk-kit/groth16": "0.3.0",
+        "download": "^8.0.0",
+        "tmp": "^0.2.1"
     }
 }
