fix: add missing toml package in rollup-plugin-rust package
fix #79

--- a/packages/rollup-plugin-rust/package.json
+++ b/packages/rollup-plugin-rust/package.json
@@ -37,6 +37,7 @@
         "glob": "^7.1.6",
         "rimraf": "^3.0.0",
         "rollup-pluginutils": "^2.8.2",
+        "toml": "^3.0.0",
         "wasm-pack": "^0.10.2"
     }
 }
