chore(poseidon-proof): move tests outside source folder

--- a/packages/poseidon-proof/build.tsconfig.json
+++ b/packages/poseidon-proof/build.tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": ".",
-        "declarationDir": "dist/types"
+        "declarationDir": "dist/types",
+        "resolveJsonModule": true
     },
     "include": ["src"]
 }
