--- a/packages/poseidon-proof/package.json
+++ b/packages/poseidon-proof/package.json
@@ -1,13 +1,16 @@
 {
     "name": "@zk-kit/poseidon-proof",
-    "version": "0.4.1",
+    "version": "0.5.0",
     "description": "A library to generate and verify Poseidon proofs.",
     "license": "MIT",
-    "main": "dist/index.js",
+    "main": "dist/index.node.js",
     "exports": {
-        "import": "./dist/index.mjs",
-        "require": "./dist/index.js",
-        "types": "./dist/types/index.d.ts"
+        "node": {
+            "import": "./dist/index.node.mjs",
+            "require": "./dist/index.node.js"
+        },
+        "browser": "./dist/index.browser.mjs",
+        "default": "./dist/index.browser.mjs"
     },
     "types": "dist/types/index.d.ts",
     "files": [
@@ -25,14 +28,16 @@
         "url": "https://github.com/privacy-scaling-explorations/zk-kit.git/issues"
     },
     "scripts": {
-        "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
-        "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
+        "build": "rimraf dist && yarn build:browser && yarn build:node",
+        "build:browser": "rollup -c rollup.browser.config.ts --configPlugin typescript",
+        "build:node": "rollup -c rollup.node.config.ts --configPlugin typescript",
         "prepublishOnly": "yarn build"
     },
     "publishConfig": {
         "access": "public"
     },
     "devDependencies": {
+        "@rollup/plugin-alias": "^5.0.1",
         "@rollup/plugin-json": "^5.0.1",
         "@types/download": "^8.0.5",
         "@types/tmp": "^0.2.6",
