--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,14 @@
     "env": {
         "es6": true
     },
-    "extends": ["airbnb-base", "airbnb-typescript/base", "plugin:jest/recommended", "plugin:jest/style", "prettier"],
+    "extends": ["airbnb-base", "airbnb-typescript/base", "prettier"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module",
         "project": ["./tsconfig.json", "./packages/**/tsconfig.json"]
     },
-    "plugins": ["@typescript-eslint", "jest"],
+    "plugins": ["@typescript-eslint"],
     "rules": {
         "no-console": ["warn", { "allow": ["info", "warn", "error"] }],
         "no-restricted-syntax": "off",
