--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
         "build": "yarn build:js && yarn compile:sol",
         "build:js": "yarn workspaces foreach --no-private run build",
         "compile:sol": "yarn workspaces foreach run compile",
-        "test": "yarn test:js && yarn test:sol",
-        "test:js": "jest --coverage",
-        "test:sol": "yarn workspace imt.sol test:coverage",
+        "test": "yarn test:libraries && yarn test:contracts && test:circuits",
+        "test:libraries": "jest --coverage",
+        "test:circuits": "yarn workspace @zk-kit/circuits test",
+        "test:contracts": "yarn workspace imt.sol test:coverage",
         "lint": "eslint . --ext .js,.ts && yarn workspace imt.sol lint",
         "prettier": "prettier -c .",
         "prettier:write": "prettier -w .",
