--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -79,5 +79,5 @@ jobs:
             - name: Install dependencies
               run: yarn
 
-            - name: Test contracts and libraries
+            - name: Test libraries, contracts and circuits
               run: yarn test
