--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -13,13 +13,18 @@
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/circuits.sol",
     "scripts": {
         "circom:compile": "circomkit compile",
-        "circom:setup": "circomkit setup"
+        "circom:setup": "circomkit setup",
+        "test": "mocha"
     },
     "dependencies": {
         "circomlib": "^2.0.5"
     },
     "devDependencies": {
-        "circomkit": "^0.0.18"
+        "@types/mocha": "^10.0.6",
+        "@zk-kit/smt": "workspace:^",
+        "circomkit": "^0.0.18",
+        "mocha": "^10.2.0",
+        "poseidon-lite": "^0.2.0"
     },
     "publishConfig": {
         "access": "public"
