ci: add condition for coverage

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -91,6 +91,7 @@ jobs:
               run: yarn test:${{ matrix.type }}
 
             - name: Coveralls
+              if: matrix.type != 'circuits'
               uses: coverallsapp/github-action@master
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
