--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -35,10 +35,10 @@ jobs:
               run: yarn
 
             - name: Compile contracts
-              run: yarn compile:sol
+              run: yarn compile:contracts
 
             - name: Build libraries
-              run: yarn build:js
+              run: yarn build:libraries
 
             - name: Run Prettier
               run: yarn prettier
