--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -33,10 +33,10 @@ jobs:
               run: yarn
 
             - name: Compile contracts
-              run: yarn compile:sol
+              run: yarn compile:contracts
 
             - name: Build libraries
-              run: yarn build:js
+              run: yarn build:libraries
 
             - name: Run Prettier
               run: yarn prettier
