--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "private": true,
     "scripts": {
         "build": "yarn build:js && yarn compile:sol",
-        "build:js": "yarn workspaces foreach --no-private run build",
-        "compile:sol": "yarn workspaces foreach run compile",
+        "build:libraries": "yarn workspaces foreach --no-private run build",
+        "compile:contracts": "yarn workspaces foreach run compile",
         "test": "yarn test:libraries && yarn test:contracts && yarn test:circuits",
         "test:libraries": "jest --coverage",
         "test:circuits": "yarn workspace @zk-kit/circuits test",
