--- a/packages/eddsa-poseidon/package.json
+++ b/packages/eddsa-poseidon/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "description": "A JavaScript EdDSA library for secure signing and verification using the Baby Jubjub elliptic curve.",
     "license": "MIT",
+    "iife": "dist/index.js",
+    "unpkg": "dist/index.min.js",
+    "jsdelivr": "dist/index.min.js",
     "main": "dist/index.node.js",
     "exports": {
         "import": "./dist/index.mjs",
@@ -12,6 +15,7 @@
     "files": [
         "dist/",
         "src/",
+        "LICENSE",
         "README.md"
     ],
     "repository": "https://github.com/privacy-scaling-explorations/zk-kit",
@@ -28,12 +32,14 @@
         "access": "public"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-node-resolve": "^15.2.3",
         "circomlibjs": "0.0.8",
         "rollup-plugin-cleanup": "^3.2.1",
+        "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.31.2"
     },
     "dependencies": {
-        "blake-hash": "^2.0.0",
         "poseidon-lite": "^0.2.0"
     }
 }
