--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -99,6 +99,12 @@ jobs:
                   path-to-lcov: ./coverage/${{ matrix.type }}/lcov.info
                   parallel: true
 
+            - name: Install Nargo
+              uses: noir-lang/noirup@v0.1.3
+
+            - name: Run nargo test
+              run: cd packages/circuits/noir/ && nargo test
+
     coverage:
         runs-on: ubuntu-latest
         needs: test
