--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -16,7 +16,7 @@
     "scripts": {
         "circom:compile": "circomkit compile",
         "circom:setup": "circomkit setup",
-        "test": "mocha"
+        "test": "mocha && cd noir && nargo test"
     },
     "dependencies": {
         "circomlib": "^2.0.5"
