--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bugs": "https://github.com/privacy-scaling-explorations/zk-kit/issues",
     "private": true,
     "scripts": {
-        "build": "yarn build:js && yarn compile:sol",
+        "build": "yarn build:libraries && yarn compile:contracts",
         "build:libraries": "yarn workspaces foreach --no-private run build",
         "compile:contracts": "yarn workspaces foreach run compile",
         "test": "yarn test:libraries && yarn test:contracts && yarn test:circuits",
