--- a/packages/smt/package.json
+++ b/packages/smt/package.json
@@ -20,7 +20,8 @@
     "files": [
         "dist/",
         "src/",
-        "README.md"
+        "README.md",
+        "LICENSE"
     ],
     "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/smt",
