--- a/packages/imt.sol/contracts/package.json
+++ b/packages/imt.sol/contracts/package.json
@@ -6,7 +6,8 @@
     "files": [
         "**/*.sol",
         "!test/",
-        "README.md"
+        "README.md",
+        "LICENSE"
     ],
     "keywords": [
         "blockchain",
