--- a/packages/lazytower/package.json
+++ b/packages/lazytower/package.json
@@ -15,7 +15,8 @@
     "files": [
         "dist/",
         "src/",
-        "README.md"
+        "README.md",
+        "LICENSE"
     ],
     "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/lazytower",
