--- a/packages/rollup-plugin-rust/package.json
+++ b/packages/rollup-plugin-rust/package.json
@@ -12,7 +12,8 @@
     "files": [
         "dist/",
         "src/",
-        "README.md"
+        "README.md",
+        "LICENSE"
     ],
     "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/rollup-plugin-rust",
