--- a/packages/imt.sol/contracts/package.json
+++ b/packages/imt.sol/contracts/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@zk-kit/imt.sol",
-    "version": "2.0.0-beta",
+    "version": "2.0.0-beta.1",
     "description": "Incremental Merkle tree implementations in Solidity.",
     "license": "MIT",
     "files": [
