--- a/packages/baby-jubjub/package.json
+++ b/packages/baby-jubjub/package.json
@@ -40,5 +40,8 @@
         "rollup-plugin-polyfill-node": "^0.13.0",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.31.2"
+    },
+    "dependencies": {
+        "@zk-kit/utils": "0.1.0"
     }
 }
