--- a/packages/eddsa-poseidon/package.json
+++ b/packages/eddsa-poseidon/package.json
@@ -42,5 +42,9 @@
         "rollup-plugin-polyfill-node": "^0.13.0",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.31.2"
+    },
+    "dependencies": {
+        "@zk-kit/baby-jubjub": "0.1.0",
+        "@zk-kit/utils": "0.1.0"
     }
 }
