--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@zk-kit/imt",
-    "version": "2.0.0-beta",
-    "description": "Incremental Merkle tree implementations in TypeScript.",
+    "name": "@zk-kit/utils",
+    "version": "0.1.0",
+    "description": "Essential zero-knowledge utility library for JavaScript developers.",
     "license": "MIT",
     "iife": "dist/index.js",
     "unpkg": "dist/index.min.js",
@@ -19,23 +19,23 @@
         "LICENSE",
         "README.md"
     ],
-    "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
-    "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/imt",
+    "repository": "https://github.com/privacy-scaling-explorations/zk-kit",
+    "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/utils",
     "bugs": {
         "url": "https://github.com/privacy-scaling-explorations/zk-kit.git/issues"
     },
     "scripts": {
-        "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
+        "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript && yarn build:iife",
+        "build:iife": "rollup -c rollup.iife.config.ts --configPlugin typescript",
         "prepublishOnly": "yarn build"
     },
     "publishConfig": {
         "access": "public"
     },
     "devDependencies": {
-        "incrementalquintree": "^1.0.9",
-        "poseidon-lite": "^0.2.0",
         "rollup-plugin-cleanup": "^3.2.1",
+        "rollup-plugin-polyfill-node": "^0.13.0",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.32.1"
+        "rollup-plugin-typescript2": "^0.31.2"
     }
 }
