--- a/packages/poseidon-cipher/package.json
+++ b/packages/poseidon-cipher/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@zk-kit/poseidon-cipher",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "Poseidon encryption and decryption in TypeScript.",
     "license": "MIT",
     "keywords": [
@@ -40,13 +40,13 @@
         "access": "public"
     },
     "devDependencies": {
-        "@zk-kit/eddsa-poseidon": "workspace:^",
+        "@zk-kit/eddsa-poseidon": "0.1.0",
         "circomlibjs": "^0.0.8",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.32.1"
     },
     "dependencies": {
-        "@zk-kit/baby-jubjub": "workspace:^"
+        "@zk-kit/baby-jubjub": "0.1.0"
     }
 }
