chore(poseidon-cipher): v0.1.1

--- a/packages/poseidon-cipher/package.json
+++ b/packages/poseidon-cipher/package.json
@@ -47,6 +47,7 @@
         "rollup-plugin-typescript2": "^0.32.1"
     },
     "dependencies": {
-        "@zk-kit/baby-jubjub": "0.1.0"
+        "@zk-kit/baby-jubjub": "0.1.1",
+        "@zk-kit/utils": "0.1.0"
     }
 }
