--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,19 +17,7 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: "18"
-                  cache: yarn
-
-            - name: Get yarn cache directory path
-              id: yarn-cache-dir-path
-              run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
-
-            - uses: actions/cache@v3
-              id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-              with:
-                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-                  restore-keys: |
-                      ${{ runner.os }}-yarn-
+                  cache: "yarn"
 
             - name: Install dependencies
               run: yarn
