feat(imt): add rust implementation of imt
re #133

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
         "build": "yarn build:libraries && yarn compile:contracts",
         "build:libraries": "yarn workspaces foreach -t --no-private run build",
         "compile:contracts": "yarn workspaces foreach run compile",
-        "test": "yarn test:libraries && yarn test:contracts && yarn test:circuits",
+        "test": "yarn test:libraries && yarn test:contracts && yarn test:circuits && yarn test:imt-crate",
         "test:libraries": "jest --coverage",
         "test:circuits": "yarn workspace @zk-kit/circuits test",
         "test:contracts": "yarn workspace imt.sol test:coverage",
+        "test:imt-crate": "cd packages/imt-rs && yarn test",
         "lint": "eslint . --ext .js,.ts && yarn workspace imt.sol lint",
         "prettier": "prettier -c .",
         "prettier:write": "prettier -w .",
