--- a/packages/imt-rs/package.json
+++ b/packages/imt-rs/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "imt-rs",
-  "version": "1.0.0",
-  "scripts": {
-    "test": "cargo nextest run"
-  }
+    "name": "imt-rs",
+    "version": "1.0.0",
+    "scripts": {
+        "test": "cargo test"
+    }
 }
