--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -33,6 +33,7 @@
         "access": "public"
     },
     "devDependencies": {
+        "@types/chai": "^4.2.0",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-polyfill-node": "^0.13.0",
         "rollup-plugin-terser": "^7.0.2",
