chore(imt): v2.0.0-beta.1

--- a/packages/imt/package.json
+++ b/packages/imt/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@zk-kit/imt",
-    "version": "2.0.0-beta",
+    "version": "2.0.0-beta.1",
     "description": "Incremental Merkle tree implementations in TypeScript.",
     "license": "MIT",
     "iife": "dist/index.js",
