refactor(baby-jubjub): use ffjavascript function for circomlibjs conversions

--- a/packages/baby-jubjub/package.json
+++ b/packages/baby-jubjub/package.json
@@ -41,6 +41,7 @@
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^11.1.6",
         "circomlibjs": "0.0.8",
+        "ffjavascript": "0.2.38",
         "rimraf": "^5.0.5",
         "rollup": "^4.12.0",
         "rollup-plugin-cleanup": "^3.2.1",
