--- a/packages/eddsa-poseidon/package.json
+++ b/packages/eddsa-poseidon/package.json
@@ -42,6 +42,7 @@
         "@rollup/plugin-typescript": "^11.1.6",
         "blake-hash": "2.0.0",
         "circomlibjs": "0.0.8",
+        "ffjavascript": "0.2.38",
         "poseidon-lite": "0.2.0",
         "rimraf": "^5.0.5",
         "rollup": "^4.12.0",
