--- a/packages/lazytower.sol/package.json
+++ b/packages/lazytower.sol/package.json
@@ -27,9 +27,9 @@
         "ethers": "^5.4.7",
         "hardhat": "^2.13.0",
         "hardhat-gas-reporter": "^1.0.8",
-        "prettier-plugin-solidity": "^1.0.0-beta.19",
-        "solhint": "^3.3.6",
-        "solhint-plugin-prettier": "^0.0.5",
+        "prettier-plugin-solidity": "^1.3.1",
+        "solhint": "^4.1.1",
+        "solhint-plugin-prettier": "^0.1.0",
         "solidity-coverage": "^0.8.1",
         "typechain": "^8.1.0"
     },
