--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,4 @@
 {
-    "**/*.{js,jsx,ts,tsx}": ["prettier --write", "eslint --fix"]
+    "**/*.{js,ts}": "eslint --fix",
+    "*": ["prettier --write"]
 }
