--- a/packages/groth16/package.json
+++ b/packages/groth16/package.json
@@ -2,18 +2,21 @@
     "name": "@zk-kit/groth16",
     "version": "0.5.0",
     "description": "A snippet of SnarkJS code for verifying and generating Groth16 proofs only.",
+    "type": "module",
     "license": "GPL-3.0",
-    "main": "dist/index.node.js",
-    "exports": {
-        "node": {
-            "import": "./dist/index.node.mjs",
-            "require": "./dist/index.node.js"
-        },
-        "browser": "./dist/index.browser.mjs",
-        "default": "./dist/index.browser.mjs",
-        "types": "./dist/types/index.d.ts"
-    },
+    "main": "dist/index.browser.js",
     "types": "dist/types/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/types/index.d.ts",
+            "node": {
+                "require": "./dist/index.node.cjs",
+                "default": "./dist/index.node.js"
+            },
+            "browser": "./dist/index.browser.js",
+            "default": "./dist/index.browser.js"
+        }
+    },
     "files": [
         "dist/",
         "src/",
@@ -36,14 +39,14 @@
     },
     "devDependencies": {
         "@iden3/binfileutils": "0.0.11",
-        "@rollup/plugin-commonjs": "^24.1.0",
-        "@rollup/plugin-node-resolve": "^15.0.2",
+        "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-typescript": "^11.1.6",
         "@rollup/plugin-virtual": "^3.0.2",
         "fastfile": "0.0.20",
         "rimraf": "^5.0.5",
-        "rollup": "^4.0.2",
-        "rollup-plugin-cleanup": "^3.2.1",
-        "rollup-plugin-typescript2": "^0.31.2"
+        "rollup": "^4.12.0",
+        "rollup-plugin-cleanup": "^3.2.1"
     },
     "dependencies": {
         "circom_runtime": "0.1.24",
