--- a/packages/imt/package.json
+++ b/packages/imt/package.json
@@ -2,17 +2,20 @@
     "name": "@zk-kit/imt",
     "version": "2.0.0-beta.1",
     "description": "Incremental Merkle tree implementations in TypeScript.",
+    "type": "module",
     "license": "MIT",
     "iife": "dist/index.js",
     "unpkg": "dist/index.min.js",
     "jsdelivr": "dist/index.min.js",
-    "main": "dist/index.node.js",
-    "exports": {
-        "import": "./dist/index.mjs",
-        "require": "./dist/index.node.js",
-        "types": "./dist/types/index.d.ts"
-    },
+    "main": "dist/index.js",
     "types": "dist/types/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/types/index.d.ts",
+            "require": "./dist/index.cjs",
+            "default": "./dist/index.js"
+        }
+    },
     "files": [
         "dist/",
         "src/",
@@ -32,10 +35,12 @@
         "access": "public"
     },
     "devDependencies": {
+        "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-typescript": "^11.1.6",
         "incrementalquintree": "^1.0.9",
         "poseidon-lite": "^0.2.0",
-        "rollup-plugin-cleanup": "^3.2.1",
-        "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.32.1"
+        "rimraf": "^5.0.5",
+        "rollup": "^4.12.0",
+        "rollup-plugin-cleanup": "^3.2.1"
     }
 }
