--- a/packages/poseidon-cipher/package.json
+++ b/packages/poseidon-cipher/package.json
@@ -2,6 +2,7 @@
     "name": "@zk-kit/poseidon-cipher",
     "version": "0.2.1",
     "description": "Poseidon encryption and decryption in TypeScript.",
+    "type": "module",
     "license": "MIT",
     "keywords": [
         "typescript",
@@ -15,13 +16,15 @@
     "iife": "dist/index.js",
     "unpkg": "dist/index.min.js",
     "jsdelivr": "dist/index.min.js",
-    "main": "dist/index.node.js",
-    "exports": {
-        "import": "./dist/index.mjs",
-        "require": "./dist/index.node.js",
-        "types": "./dist/types/index.d.ts"
-    },
+    "main": "dist/index.js",
     "types": "dist/types/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/types/index.d.ts",
+            "require": "./dist/index.cjs",
+            "default": "./dist/index.js"
+        }
+    },
     "files": [
         "dist/",
         "src/",
@@ -31,20 +34,19 @@
     "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/poseidon-cipher",
     "scripts": {
-        "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
-        "build:iife": "rollup -c rollup.iife.config.ts --configPlugin typescript",
-        "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript && yarn build:iife",
+        "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
         "prepublishOnly": "yarn build"
     },
     "publishConfig": {
         "access": "public"
     },
     "devDependencies": {
+        "@rollup/plugin-typescript": "^11.1.6",
         "@zk-kit/eddsa-poseidon": "0.1.0",
         "circomlibjs": "^0.0.8",
-        "rollup-plugin-cleanup": "^3.2.1",
-        "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.32.1"
+        "rimraf": "^5.0.5",
+        "rollup": "^4.12.0",
+        "rollup-plugin-cleanup": "^3.2.1"
     },
     "dependencies": {
         "@zk-kit/baby-jubjub": "0.1.1",
