--- a/packages/smt/package.json
+++ b/packages/smt/package.json
@@ -2,6 +2,7 @@
     "name": "@zk-kit/smt",
     "version": "1.0.0",
     "description": "Sparse Merkle tree implementation in TypeScript.",
+    "type": "module",
     "license": "MIT",
     "keywords": [
         "typescript",
@@ -11,13 +12,15 @@
     "iife": "dist/index.js",
     "unpkg": "dist/index.min.js",
     "jsdelivr": "dist/index.min.js",
-    "main": "dist/index.node.js",
-    "exports": {
-        "import": "./dist/index.mjs",
-        "require": "./dist/index.node.js",
-        "types": "./dist/types/index.d.ts"
-    },
+    "main": "dist/index.js",
     "types": "dist/types/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/types/index.d.ts",
+            "require": "./dist/index.cjs",
+            "default": "./dist/index.js"
+        }
+    },
     "files": [
         "dist/",
         "src/",
@@ -32,7 +35,6 @@
         "url": "https://cedoor.dev"
     },
     "scripts": {
-        "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
         "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
         "prepublishOnly": "yarn build"
     },
@@ -40,11 +42,13 @@
         "access": "public"
     },
     "devDependencies": {
+        "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-typescript": "^11.1.6",
         "@types/crypto-js": "^4.1.1",
         "circomlibjs": "^0.0.8",
         "crypto-js": "^4.1.1",
-        "rollup-plugin-cleanup": "^3.2.1",
-        "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.32.1"
+        "rimraf": "^5.0.5",
+        "rollup": "^4.12.0",
+        "rollup-plugin-cleanup": "^3.2.1"
     }
 }
