--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,24 +2,27 @@
     "name": "@zk-kit/utils",
     "version": "0.1.0",
     "description": "Essential zero-knowledge utility library for JavaScript developers.",
+    "type": "module",
     "license": "MIT",
     "iife": "dist/index.js",
     "unpkg": "dist/index.min.js",
     "jsdelivr": "dist/index.min.js",
-    "main": "dist/index.node.js",
-    "exports": {
-        "import": "./dist/index.mjs",
-        "require": "./dist/index.node.js",
-        "types": "./dist/types/index.d.ts"
-    },
+    "main": "dist/index.js",
     "types": "dist/types/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/types/index.d.ts",
+            "require": "./dist/index.cjs",
+            "default": "./dist/index.js"
+        }
+    },
     "files": [
         "dist/",
         "src/",
         "LICENSE",
         "README.md"
     ],
-    "repository": "https://github.com/privacy-scaling-explorations/zk-kit",
+    "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/utils",
     "bugs": {
         "url": "https://github.com/privacy-scaling-explorations/zk-kit.git/issues"
@@ -33,10 +36,11 @@
         "access": "public"
     },
     "devDependencies": {
-        "@types/chai": "^4.2.0",
+        "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-typescript": "^11.1.6",
+        "rimraf": "^5.0.5",
+        "rollup": "^4.12.0",
         "rollup-plugin-cleanup": "^3.2.1",
-        "rollup-plugin-polyfill-node": "^0.13.0",
-        "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.31.2"
+        "rollup-plugin-polyfill-node": "^0.13.0"
     }
 }
