--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -66,6 +66,9 @@ jobs:
             - name: Install dependencies
               run: yarn
 
+            - name: Build libraries and contracts
+              run: yarn build
+
             - name: Test libraries, contracts and circuits
               run: yarn test:${{ matrix.type }}
 
