--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -58,5 +58,8 @@ jobs:
             - name: Install dependencies
               run: yarn
 
+            - name: Build libraries and contracts
+              run: yarn build
+
             - name: Test libraries, contracts and circuits
               run: yarn test
