--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,8 +1,9 @@
-nodeLinker: node-modules
 checksumBehavior: update
 
-plugins:
-    - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-      spec: "@yarnpkg/plugin-workspace-tools"
+compressionLevel: mixed
 
-yarnPath: .yarn/releases/yarn-3.2.1.cjs
+enableGlobalCache: false
+
+nodeLinker: node-modules
+
+yarnPath: .yarn/releases/yarn-4.1.0.cjs
