--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "private": true,
     "scripts": {
         "build": "yarn build:libraries && yarn compile:contracts",
-        "build:libraries": "yarn workspaces foreach -t --no-private run build",
-        "compile:contracts": "yarn workspaces foreach run compile",
+        "build:libraries": "yarn workspaces foreach -A -t --no-private run build",
+        "compile:contracts": "yarn workspaces foreach -A run compile",
         "test": "yarn test:libraries && yarn test:contracts && yarn test:circuits",
         "test:libraries": "jest --coverage",
         "test:library": "jest packages/${0}",
