--- a/packages/eddsa-proof/package.json
+++ b/packages/eddsa-proof/package.json
@@ -54,8 +54,6 @@
         "@ethersproject/bytes": "^5.7.0",
         "@ethersproject/keccak256": "^5.7.0",
         "@zk-kit/eddsa-poseidon": "0.5.1",
-        "download": "^8.0.0",
-        "snarkjs": "^0.7.3",
-        "tmp": "^0.2.1"
+        "snarkjs": "^0.7.3"
     }
 }
