feat(utils): add new utility modules for errors and types
Semaphore recently added a new package with some utility functions. The first modules in the
package, which allow type checking and type error handling, can however also be used outside
Semaphore. ZK-Kit is a better place for that kind of function.

BREAKING CHANGE: `isStringifiedBigint` has been renamed to `isStringifiedBigInt`

re #177

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -14,6 +14,16 @@
             "types": "./dist/types/index.d.ts",
             "require": "./dist/index.cjs",
             "default": "./dist/index.js"
+        },
+        "./error-handlers": {
+            "types": "./dist/types/error-handlers.d.ts",
+            "require": "./dist/lib.commonjs/error-handlers.cjs",
+            "default": "./dist/lib.esm/error-handlers.js"
+        },
+        "./type-checks": {
+            "types": "./dist/types/type-checks.d.ts",
+            "require": "./dist/lib.commonjs/type-checks.cjs",
+            "default": "./dist/lib.esm/type-checks.js"
         }
     },
     "files": [
