--- a/packages/baby-jubjub/package.json
+++ b/packages/baby-jubjub/package.json
@@ -28,15 +28,13 @@
         "url": "https://github.com/privacy-scaling-explorations/zk-kit.git/issues"
     },
     "scripts": {
-        "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript && yarn build:iife",
-        "build:iife": "rollup -c rollup.iife.config.ts --configPlugin typescript",
+        "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
         "prepublishOnly": "yarn build"
     },
     "publishConfig": {
         "access": "public"
     },
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^11.1.6",
