chore(imt.sol): make files to include into npm yarn-compatible

--- a/packages/imt.sol/contracts/package.json
+++ b/packages/imt.sol/contracts/package.json
@@ -4,8 +4,9 @@
     "description": "Incremental Merkle tree implementations in Solidity.",
     "license": "MIT",
     "files": [
-        "**/*.sol",
-        "!test/",
+        "*.sol",
+        "internal/*",
+        "!test/*",
         "README.md",
         "LICENSE"
     ],
