--- a/packages/baby-jubjub/package.json
+++ b/packages/baby-jubjub/package.json
@@ -46,6 +46,6 @@
         "rollup-plugin-polyfill-node": "^0.13.0"
     },
     "dependencies": {
-        "@zk-kit/utils": "0.8.1"
+        "@zk-kit/utils": "1.0.0-beta"
     }
 }
