--- a/packages/baby-jubjub/package.json
+++ b/packages/baby-jubjub/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@zk-kit/baby-jubjub",
-    "version": "0.3.0",
+    "version": "1.0.0-beta",
     "description": "A JavaScript library for adding points to the curve.",
     "type": "module",
     "license": "MIT",
