--- a/packages/poseidon-cipher/package.json
+++ b/packages/poseidon-cipher/package.json
@@ -49,7 +49,7 @@
         "rollup-plugin-cleanup": "^3.2.1"
     },
     "dependencies": {
-        "@zk-kit/baby-jubjub": "0.3.0",
+        "@zk-kit/baby-jubjub": "1.0.0-beta",
         "@zk-kit/utils": "1.0.0-beta"
     }
 }
